syntax = "proto3";
option go_package = "gsf/protocol/rpc/rpcpb";

message echoReq {
    string msg = 1;
}

message echoResp {
    string msg = 1;
}
